// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataWranglingResult: Component should render correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Wrangling Result"
  />
  <MobileMenu
    headerSubtitle={
      <Memo(FormattedMessage)
        defaultMessage="Data Wrangling Result"
        id="dataSource.dataWranglingResult.pageTitle"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <Memo(FormattedMessage)
        defaultMessage="Data Wrangling Result"
        id="dataSource.dataWranglingResult.pageTitle"
      />
    }
  >
    <DataSourceNavigation
      dataSource={
        Object {
          "activeJob": Object {
            "id": 1,
            "scripts": Array [
              Object {
                "id": 1,
              },
              Object {
                "id": 15,
              },
            ],
          },
          "id": 1,
          "metaData": Object {},
          "project": Object {
            "id": "1",
          },
        }
      }
      fetchPreview={[MockFunction]}
      hideOnDesktop={false}
      history={
        Object {
          "goBack": [Function],
          "push": [Function],
        }
      }
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
            "projectId": "1",
            "step": "4",
          },
          "url": "/datasource/1/result",
        }
      }
      previewData={
        Object {
          "data": Array [
            Object {
              "Birthday": "02/22/1732",
              "Birthplace": "Westmoreland County",
              "First Name": "George",
              "Full Name": "George Washington",
              "Last Name": "Washington",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "10/30/1735",
              "Birthplace": "Braintree",
              "First Name": "John",
              "Full Name": "John Adams",
              "Last Name": "Adams",
              "State of Birth": "MA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "04/13/1743",
              "Birthplace": "Shadwell",
              "First Name": "Thomas",
              "Full Name": "Thomas Jefferson",
              "Last Name": "Jefferson",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "03/16/1751",
              "Birthplace": "Port Conway",
              "First Name": "James",
              "Full Name": "James Madison",
              "Last Name": "Madison",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "04/28/1758",
              "Birthplace": "Monroe Hall",
              "First Name": "James",
              "Full Name": "James Monroe",
              "Last Name": "Monroe",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
          ],
          "fields": Object {
            "Birthday": Object {},
            "Birthplace": Object {},
            "First Name": Object {},
            "Full Name": Object {},
            "Last Name": Object {},
            "State of Birth": Object {},
            "Url": Object {},
          },
        }
      }
      userRole="admin"
    />
  </ContextHeader>
  <DataPreview
    dataSource={
      Object {
        "activeJob": Object {
          "id": 1,
          "scripts": Array [
            Object {
              "id": 1,
            },
            Object {
              "id": 15,
            },
          ],
        },
        "id": 1,
        "metaData": Object {},
        "project": Object {
          "id": "1",
        },
      }
    }
    fetchPreview={[MockFunction]}
    history={
      Object {
        "goBack": [Function],
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    jobId={1}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "4",
        },
        "url": "/datasource/1/result",
      }
    }
    previewData={
      Object {
        "data": Array [
          Object {
            "Birthday": "02/22/1732",
            "Birthplace": "Westmoreland County",
            "First Name": "George",
            "Full Name": "George Washington",
            "Last Name": "Washington",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "10/30/1735",
            "Birthplace": "Braintree",
            "First Name": "John",
            "Full Name": "John Adams",
            "Last Name": "Adams",
            "State of Birth": "MA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/13/1743",
            "Birthplace": "Shadwell",
            "First Name": "Thomas",
            "Full Name": "Thomas Jefferson",
            "Last Name": "Jefferson",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "03/16/1751",
            "Birthplace": "Port Conway",
            "First Name": "James",
            "Full Name": "James Madison",
            "Last Name": "Madison",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/28/1758",
            "Birthplace": "Monroe Hall",
            "First Name": "James",
            "Full Name": "James Monroe",
            "Last Name": "Monroe",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
        ],
        "fields": Object {
          "Birthday": Object {},
          "Birthplace": Object {},
          "First Name": Object {},
          "Full Name": Object {},
          "Last Name": Object {},
          "State of Birth": Object {},
          "Url": Object {},
        },
      }
    }
    userRole="admin"
  />
  <DataSourceNavigation
    dataSource={
      Object {
        "activeJob": Object {
          "id": 1,
          "scripts": Array [
            Object {
              "id": 1,
            },
            Object {
              "id": 15,
            },
          ],
        },
        "id": 1,
        "metaData": Object {},
        "project": Object {
          "id": "1",
        },
      }
    }
    fetchPreview={[MockFunction]}
    hideOnDesktop={true}
    history={
      Object {
        "goBack": [Function],
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "4",
        },
        "url": "/datasource/1/result",
      }
    }
    previewData={
      Object {
        "data": Array [
          Object {
            "Birthday": "02/22/1732",
            "Birthplace": "Westmoreland County",
            "First Name": "George",
            "Full Name": "George Washington",
            "Last Name": "Washington",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "10/30/1735",
            "Birthplace": "Braintree",
            "First Name": "John",
            "Full Name": "John Adams",
            "Last Name": "Adams",
            "State of Birth": "MA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/13/1743",
            "Birthplace": "Shadwell",
            "First Name": "Thomas",
            "Full Name": "Thomas Jefferson",
            "Last Name": "Jefferson",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "03/16/1751",
            "Birthplace": "Port Conway",
            "First Name": "James",
            "Full Name": "James Madison",
            "Last Name": "Madison",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/28/1758",
            "Birthplace": "Monroe Hall",
            "First Name": "James",
            "Full Name": "James Monroe",
            "Last Name": "Monroe",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
        ],
        "fields": Object {
          "Birthday": Object {},
          "Birthplace": Object {},
          "First Name": Object {},
          "Full Name": Object {},
          "Last Name": Object {},
          "State of Birth": Object {},
          "Url": Object {},
        },
      }
    }
    userRole="admin"
  />
</Fragment>
`;

exports[`DataWranglingResult: Component should render correctly with loading 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Wrangling Result"
  />
  <MobileMenu
    headerSubtitle={
      <Memo(FormattedMessage)
        defaultMessage="Data Wrangling Result"
        id="dataSource.dataWranglingResult.pageTitle"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <Memo(FormattedMessage)
        defaultMessage="Data Wrangling Result"
        id="dataSource.dataWranglingResult.pageTitle"
      />
    }
  >
    <DataSourceNavigation
      dataSource={
        Object {
          "activeJob": Object {
            "id": 1,
            "scripts": Array [
              Object {
                "id": 1,
              },
              Object {
                "id": 15,
              },
            ],
          },
          "id": 1,
          "metaData": Object {},
          "project": Object {
            "id": "1",
          },
        }
      }
      fetchPreview={[Function]}
      hideOnDesktop={false}
      history={
        Object {
          "goBack": [Function],
          "push": [Function],
        }
      }
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
            "projectId": "1",
            "step": "4",
          },
          "url": "/datasource/1/result",
        }
      }
      previewData={
        Object {
          "data": Array [
            Object {
              "Birthday": "02/22/1732",
              "Birthplace": "Westmoreland County",
              "First Name": "George",
              "Full Name": "George Washington",
              "Last Name": "Washington",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "10/30/1735",
              "Birthplace": "Braintree",
              "First Name": "John",
              "Full Name": "John Adams",
              "Last Name": "Adams",
              "State of Birth": "MA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "04/13/1743",
              "Birthplace": "Shadwell",
              "First Name": "Thomas",
              "Full Name": "Thomas Jefferson",
              "Last Name": "Jefferson",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "03/16/1751",
              "Birthplace": "Port Conway",
              "First Name": "James",
              "Full Name": "James Madison",
              "Last Name": "Madison",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
            Object {
              "Birthday": "04/28/1758",
              "Birthplace": "Monroe Hall",
              "First Name": "James",
              "Full Name": "James Monroe",
              "Last Name": "Monroe",
              "State of Birth": "VA",
              "Url": "some.url.com",
            },
          ],
          "fields": Object {
            "Birthday": Object {},
            "Birthplace": Object {},
            "First Name": Object {},
            "Full Name": Object {},
            "Last Name": Object {},
            "State of Birth": Object {},
            "Url": Object {},
          },
        }
      }
      userRole="admin"
    />
  </ContextHeader>
  <DataPreview
    dataSource={
      Object {
        "activeJob": Object {
          "id": 1,
          "scripts": Array [
            Object {
              "id": 1,
            },
            Object {
              "id": 15,
            },
          ],
        },
        "id": 1,
        "metaData": Object {},
        "project": Object {
          "id": "1",
        },
      }
    }
    fetchPreview={[Function]}
    history={
      Object {
        "goBack": [Function],
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    jobId={1}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "4",
        },
        "url": "/datasource/1/result",
      }
    }
    previewData={
      Object {
        "data": Array [
          Object {
            "Birthday": "02/22/1732",
            "Birthplace": "Westmoreland County",
            "First Name": "George",
            "Full Name": "George Washington",
            "Last Name": "Washington",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "10/30/1735",
            "Birthplace": "Braintree",
            "First Name": "John",
            "Full Name": "John Adams",
            "Last Name": "Adams",
            "State of Birth": "MA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/13/1743",
            "Birthplace": "Shadwell",
            "First Name": "Thomas",
            "Full Name": "Thomas Jefferson",
            "Last Name": "Jefferson",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "03/16/1751",
            "Birthplace": "Port Conway",
            "First Name": "James",
            "Full Name": "James Madison",
            "Last Name": "Madison",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/28/1758",
            "Birthplace": "Monroe Hall",
            "First Name": "James",
            "Full Name": "James Monroe",
            "Last Name": "Monroe",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
        ],
        "fields": Object {
          "Birthday": Object {},
          "Birthplace": Object {},
          "First Name": Object {},
          "Full Name": Object {},
          "Last Name": Object {},
          "State of Birth": Object {},
          "Url": Object {},
        },
      }
    }
    userRole="admin"
  />
  <DataSourceNavigation
    dataSource={
      Object {
        "activeJob": Object {
          "id": 1,
          "scripts": Array [
            Object {
              "id": 1,
            },
            Object {
              "id": 15,
            },
          ],
        },
        "id": 1,
        "metaData": Object {},
        "project": Object {
          "id": "1",
        },
      }
    }
    fetchPreview={[Function]}
    hideOnDesktop={true}
    history={
      Object {
        "goBack": [Function],
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "4",
        },
        "url": "/datasource/1/result",
      }
    }
    previewData={
      Object {
        "data": Array [
          Object {
            "Birthday": "02/22/1732",
            "Birthplace": "Westmoreland County",
            "First Name": "George",
            "Full Name": "George Washington",
            "Last Name": "Washington",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "10/30/1735",
            "Birthplace": "Braintree",
            "First Name": "John",
            "Full Name": "John Adams",
            "Last Name": "Adams",
            "State of Birth": "MA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/13/1743",
            "Birthplace": "Shadwell",
            "First Name": "Thomas",
            "Full Name": "Thomas Jefferson",
            "Last Name": "Jefferson",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "03/16/1751",
            "Birthplace": "Port Conway",
            "First Name": "James",
            "Full Name": "James Madison",
            "Last Name": "Madison",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
          Object {
            "Birthday": "04/28/1758",
            "Birthplace": "Monroe Hall",
            "First Name": "James",
            "Full Name": "James Monroe",
            "Last Name": "Monroe",
            "State of Birth": "VA",
            "Url": "some.url.com",
          },
        ],
        "fields": Object {
          "Birthday": Object {},
          "Birthplace": Object {},
          "First Name": Object {},
          "Full Name": Object {},
          "Last Name": Object {},
          "State of Birth": Object {},
          "Url": Object {},
        },
      }
    }
    userRole="admin"
  />
</Fragment>
`;
